@startuml

title __PHOTOGALLERYAPP's Class Diagram__\n

  namespace com.example.photogalleryapp {
    class com.example.photogalleryapp.MainActivity {
        {static} + EXTRA_MESSAGE : String
        + locationManager : LocationManager
        {static} ~ SEARCH_ACTIVITY_REQUEST_CODE : int
        ~ mCurrentPhotoPath : String
        {static} - REQUEST_IMAGE_CAPTURE : int
        - index : int
        - photos : ArrayList<String>
        + deletePhoto()
        + onLocationChanged()
        + record()
        + scrollPhotos()
        + search()
        + share()
        + takePhoto()
        # onActivityResult()
        # onCreate()
        - createImageFile()
        - displayPhoto()
        - findPhotos()
        - getLocation()
        - updatePhoto()
    }
  }
  

  namespace com.example.photogalleryapp {
    class com.example.photogalleryapp.MainActivity.Weather {
        + searchWeather()
        # doInBackground()
    }
  }
  

  namespace com.example.photogalleryapp {
    class com.example.photogalleryapp.PasswordPrompt {
        {static} + EXTRA_MESSAGE : String
        ~ encryted_password : String
        {static} + getSHA()
        {static} + toHexString()
        # onCreate()
    }
  }
  

  namespace com.example.photogalleryapp {
    class com.example.photogalleryapp.SearchActivity {
        + cancel()
        + go()
        # onCreate()
    }
  }
  

  namespace com.example.photogalleryapp {
    class com.example.photogalleryapp.VideoCapture {
        ~ mCurrentVideoPath : String
        {static} - REQUEST_VIDEO_CAPTURE : int
        - index : int
        - videos : ArrayList<String>
        + scrollVideos()
        + takeVideo()
        # onActivityResult()
        # onCreate()
        - createVideoFile()
        - displayVideo()
        - findVideos()
    }
  }
  

  com.example.photogalleryapp.MainActivity .up.|> android.location.LocationListener
  com.example.photogalleryapp.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.photogalleryapp.MainActivity +-down- com.example.photogalleryapp.MainActivity.Weather
  com.example.photogalleryapp.MainActivity.Weather -up-|> android.os.AsyncTask
  com.example.photogalleryapp.PasswordPrompt -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.photogalleryapp.SearchActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.photogalleryapp.VideoCapture -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
